1.5/_sources/modules/generated/sklearn.tree.ExtraTreeClassifier.rst.txt
ExtraTreeClassifier
===================

.. currentmodule:: sklearn.tree

.. autoclass:: ExtraTreeClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.tree.ExtraTreeClassifier sklearn.tree.ExtraTreeClassifier.__init__ sklearn.tree.ExtraTreeClassifier.apply sklearn.tree.ExtraTreeClassifier.cost_complexity_pruning_path sklearn.tree.ExtraTreeClassifier.decision_path sklearn.tree.ExtraTreeClassifier.fit sklearn.tree.ExtraTreeClassifier.get_depth sklearn.tree.ExtraTreeClassifier.get_metadata_routing sklearn.tree.ExtraTreeClassifier.get_n_leaves sklearn.tree.ExtraTreeClassifier.get_params sklearn.tree.ExtraTreeClassifier.predict sklearn.tree.ExtraTreeClassifier.predict_log_proba sklearn.tree.ExtraTreeClassifier.predict_proba sklearn.tree.ExtraTreeClassifier.score sklearn.tree.ExtraTreeClassifier.set_fit_request sklearn.tree.ExtraTreeClassifier.set_params sklearn.tree.ExtraTreeClassifier.set_predict_proba_request sklearn.tree.ExtraTreeClassifier.set_predict_request sklearn.tree.ExtraTreeClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -