1.7/_sources/modules/generated/sklearn.tree.ExtraTreeClassifier.rst.txt
ExtraTreeClassifier
===================

.. currentmodule:: sklearn.tree

.. autoclass:: ExtraTreeClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.tree.ExtraTreeClassifier sklearn.tree.ExtraTreeClassifier.__delattr__ sklearn.tree.ExtraTreeClassifier.__dir__ sklearn.tree.ExtraTreeClassifier.__eq__ sklearn.tree.ExtraTreeClassifier.__format__ sklearn.tree.ExtraTreeClassifier.__ge__ sklearn.tree.ExtraTreeClassifier.__getattribute__ sklearn.tree.ExtraTreeClassifier.__getstate__ sklearn.tree.ExtraTreeClassifier.__gt__ sklearn.tree.ExtraTreeClassifier.__hash__ sklearn.tree.ExtraTreeClassifier.__init__ sklearn.tree.ExtraTreeClassifier.__init_subclass__ sklearn.tree.ExtraTreeClassifier.__le__ sklearn.tree.ExtraTreeClassifier.__lt__ sklearn.tree.ExtraTreeClassifier.__ne__ sklearn.tree.ExtraTreeClassifier.__new__ sklearn.tree.ExtraTreeClassifier.__reduce__ sklearn.tree.ExtraTreeClassifier.__reduce_ex__ sklearn.tree.ExtraTreeClassifier.__repr__ sklearn.tree.ExtraTreeClassifier.__setattr__ sklearn.tree.ExtraTreeClassifier.__setstate__ sklearn.tree.ExtraTreeClassifier.__sizeof__ sklearn.tree.ExtraTreeClassifier.__sklearn_clone__ sklearn.tree.ExtraTreeClassifier.__sklearn_tags__ sklearn.tree.ExtraTreeClassifier.__str__ sklearn.tree.ExtraTreeClassifier.__subclasshook__ sklearn.tree.ExtraTreeClassifier._build_request_for_signature sklearn.tree.ExtraTreeClassifier._compute_missing_values_in_feature_mask sklearn.tree.ExtraTreeClassifier._fit sklearn.tree.ExtraTreeClassifier._get_default_requests sklearn.tree.ExtraTreeClassifier._get_doc_link sklearn.tree.ExtraTreeClassifier._get_metadata_request sklearn.tree.ExtraTreeClassifier._get_param_names sklearn.tree.ExtraTreeClassifier._get_params_html sklearn.tree.ExtraTreeClassifier._html_repr sklearn.tree.ExtraTreeClassifier._prune_tree sklearn.tree.ExtraTreeClassifier._repr_html_inner sklearn.tree.ExtraTreeClassifier._repr_mimebundle_ sklearn.tree.ExtraTreeClassifier._support_missing_values sklearn.tree.ExtraTreeClassifier._validate_X_predict sklearn.tree.ExtraTreeClassifier._validate_params sklearn.tree.ExtraTreeClassifier.apply sklearn.tree.ExtraTreeClassifier.cost_complexity_pruning_path sklearn.tree.ExtraTreeClassifier.decision_path sklearn.tree.ExtraTreeClassifier.fit sklearn.tree.ExtraTreeClassifier.get_depth sklearn.tree.ExtraTreeClassifier.get_metadata_routing sklearn.tree.ExtraTreeClassifier.get_n_leaves sklearn.tree.ExtraTreeClassifier.get_params sklearn.tree.ExtraTreeClassifier.predict sklearn.tree.ExtraTreeClassifier.predict_log_proba sklearn.tree.ExtraTreeClassifier.predict_proba sklearn.tree.ExtraTreeClassifier.score sklearn.tree.ExtraTreeClassifier.set_fit_request sklearn.tree.ExtraTreeClassifier.set_params sklearn.tree.ExtraTreeClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -